[package]
name = "rust-snake-game"
version = "0.1.0"
authors = ["YukiUmetsu <yuuki.umetsu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "*"
gl = "*"
libc = "*"
piston_window = "0.117.0"
rand = "0.7.3"